[package]
name = "atlas_txn_sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = { version = "0.20.1", features = [
  "server",
  "http-client",
  "macros",
] }
jsonrpsee-types = "0.18.1"
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
  "json",
  "env-filter",
  "ansi",
] }
figment = { version = "0.10.6", features = ["env", "test"] }
tonic = { version = "0.9.2", features = ["gzip", "tls", "tls-roots"] }
solana-client = { version = "1.17.28" }
solana-transaction-status = { version = "1.17.28" }
solana-sdk = { version = "1.17.28" }
solana-program-runtime = { version = "1.17.28" }
solana-rpc-client-api = { version = "1.17.28" }
cadence = "0.29.0"
cadence-macros = "0.29.0"
tower = { version = "0.4.13", features = ["full"] }
anyhow = "1.0.80"
tower-http = { version = "0.4.4", features = ["auth"] }
base64 = "0.21.6"
bincode = "1.3.3"
crossbeam = "0.8.2"
dashmap = "5.5.3"
futures = "0.3.24"
yellowstone-grpc-proto = { git = "https://github.com/helius-labs/yellowstone-grpc", tag = "v1.13.0+solana.1.17.28" }
yellowstone-grpc-client = { git = "https://github.com/helius-labs/yellowstone-grpc", tag = "v1.13.0+solana.1.17.28" }
futures-channel = "0.3.30"
futures-sink = "0.3.30"
rand = "0.8.5"
indexmap = "2.2.5"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
